welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for ( x <- 0 to nums.length-1) {
                ^